--- a/example/minimal.html
+++ b/example/minimal.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Minimal winter-canvas example</title>
-<script src="../component/winter-canvas.js" type="module" defer async></script>
+<script src="../component/winter-canvas.js" type="module"></script>
 
 <style>
   body {
